# tecs

./: .gitignore  Cargo.toml  README.md
src/: bin.rs  interpreter.rs  lib.rs  parser.rs  tecs_file.rs
tecs-syntax/: package.json  tecs-syntax-0.0.1.vsix
tecs-syntax/syntaxes/: tecs.tmLanguage.json
tests/: query.rw  query.tcs  test.tcs  test_gale.rw  test_gale.tcs  test_with_ters.rw  test_with_ters.tcs  tests.rs
