[package]
name = "tecs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
nom = "6.0.0"
aterms = { git="https://github.com/MDBijman/ters" }
ters = { git="https://github.com/MDBijman/ters" }

[patch.'https://github.com/MDBijman/ters']
aterms = { path = "../ters/aterms", version="0.1.0" }
ters = { path = "../ters/ters", version="0.1.0" }

[lib]
name = "tecs"
path = "src/lib.rs"

[[bin]]
name = "tecs"
path = "src/bin.rs"